--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Hello, GitHub, my name is Aaron Marcus.
+<!doctype html>
+<html>
+	<head>
+
+		<!-- CMD + / will generate comment syntax -->
+
+		<!-- the <head> tag is meant to hold metadeta -->
+			<title>My First webdsite</title>
+
+	</head>
+	<body>
+
+	<h1 id="john-smith">Hello, Wrold!</h1>
+	<h2>Hello, Other Wrold!</h2>
+
+	<b class="info black">Look ma! I'm a bold</b>
+	<em class="info green">Look ma! I'm a fancy</em>
+
+	<!-- attributres:
+
+		href: hyperlink reference: the url you want your link to point to 
+		to make your own attribute names, prepend with data-* -->
+
+	<a href="https://placekitten.com/" data-customAttribute="blah" target="_blank">Click here to go somewhere</a>
+
+	<img src="kitten.jpg">
+	</body>
+</html>
