--- a/press-release.html
+++ b/press-release.html
@@ -19,7 +19,7 @@
 	<b class="info black">Help me please!</b>
 	<em class="info green">I need a friend</em>
 
-	<a href="https://placekitten.com/" data-customAttribute="blah" target="_blank">Click here to pick a kitty</a>
+	<a href="https://placekitten.com/" data-customAttribute="blah" target="_blank">Click here to take a cat home meow</a>
 
 	
 	</body>
