--- a/press-release.html
+++ b/press-release.html
@@ -16,8 +16,8 @@
 "
 	<img src="kitten3.jpg">
 
-	<b class="info black">Help me please!</b>
-	<em class="info green">I need a friend</em>
+	<b class="info black">Help me!</b>
+	<em class="info green">I need a friend please</em>
 
 	<a href="https://placekitten.com/" data-customAttribute="blah" target="_blank">Click here to take a cat home meow</a>
 
