--- a/press-release.html
+++ b/press-release.html
@@ -10,14 +10,14 @@
 	<h2>These saddd cats need homes :(</h2>
 
 
-	<img src="kitten1.jpg">
+	<h3><img src="kitten1.jpg"></h3>
 
 	<img src="kitten2.jpg">
 "
 	<img src="kitten3.jpg">
 
 	<b class="info black">Help me!</b>
-	<em class="info green">I need a friend please</em>
+	<em class="info green">I need a friend <strong> please </strong></em>
 
 	<a href="https://placekitten.com/" data-customAttribute="blah" target="_blank">Click here to take a cat home meow</a>
 
